; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/terasic/mtl/extr_terasic_mtl_nexus.c_terasic_mtl_nexus_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/terasic/mtl/extr_terasic_mtl_nexus.c_terasic_mtl_nexus_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.terasic_mtl_softc = type { i32, i32, i32, i32, i32, i32 }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @terasic_mtl_nexus_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @terasic_mtl_nexus_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.terasic_mtl_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.terasic_mtl_softc* @device_get_softc(i32 %4)
  store %struct.terasic_mtl_softc* %5, %struct.terasic_mtl_softc** %3, align 8
  %6 = load %struct.terasic_mtl_softc*, %struct.terasic_mtl_softc** %3, align 8
  %7 = call i32 @terasic_mtl_detach(%struct.terasic_mtl_softc* %6)
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @SYS_RES_MEMORY, align 4
  %10 = load %struct.terasic_mtl_softc*, %struct.terasic_mtl_softc** %3, align 8
  %11 = getelementptr inbounds %struct.terasic_mtl_softc, %struct.terasic_mtl_softc* %10, i32 0, i32 5
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.terasic_mtl_softc*, %struct.terasic_mtl_softc** %3, align 8
  %14 = getelementptr inbounds %struct.terasic_mtl_softc, %struct.terasic_mtl_softc* %13, i32 0, i32 4
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @bus_release_resource(i32 %8, i32 %9, i32 %12, i32 %15)
  %17 = load i32, i32* %2, align 4
  %18 = load i32, i32* @SYS_RES_MEMORY, align 4
  %19 = load %struct.terasic_mtl_softc*, %struct.terasic_mtl_softc** %3, align 8
  %20 = getelementptr inbounds %struct.terasic_mtl_softc, %struct.terasic_mtl_softc* %19, i32 0, i32 3
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.terasic_mtl_softc*, %struct.terasic_mtl_softc** %3, align 8
  %23 = getelementptr inbounds %struct.terasic_mtl_softc, %struct.terasic_mtl_softc* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @bus_release_resource(i32 %17, i32 %18, i32 %21, i32 %24)
  %26 = load i32, i32* %2, align 4
  %27 = load i32, i32* @SYS_RES_MEMORY, align 4
  %28 = load %struct.terasic_mtl_softc*, %struct.terasic_mtl_softc** %3, align 8
  %29 = getelementptr inbounds %struct.terasic_mtl_softc, %struct.terasic_mtl_softc* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.terasic_mtl_softc*, %struct.terasic_mtl_softc** %3, align 8
  %32 = getelementptr inbounds %struct.terasic_mtl_softc, %struct.terasic_mtl_softc* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @bus_release_resource(i32 %26, i32 %27, i32 %30, i32 %33)
  ret i32 0
}

declare dso_local %struct.terasic_mtl_softc* @device_get_softc(i32) #1

declare dso_local i32 @terasic_mtl_detach(%struct.terasic_mtl_softc*) #1

declare dso_local i32 @bus_release_resource(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
